--- a/src/app/shared/components/set-priorites/set-priorites.component.html
+++ b/src/app/shared/components/set-priorites/set-priorites.component.html
@@ -87,7 +87,7 @@
                                                     [(ngModel)]="selectedItemCompound" 
                                                     [settings]="settingsCompound"
                                                     (onSelect)="onItemSelectCompound($event)"
-                                                    (onDeSelect) =onItemDeSelectCompound()
+                                                    (onDeSelect) ="onItemDeSelectCompound()"
                                                     (onDeSelectAll)="onItemDeSelectCompound()">
                                                 </angular2-multiselect>
                             
